# invoice-processor

./: .gitignore  pyproject.toml
src/invoice_processor/: cli.py  invoice.py  logging_config.py  main.py  parser.py  validator.py
src/invoice_processor/generators/: excel_generator.py  latex_generator.py
test/: test_excel_generator.py  test_parser.py  test_validator.py
